--- a/client/app/playerPanel/playerPanel.less
+++ b/client/app/playerPanel/playerPanel.less
@@ -399,17 +399,18 @@ div.panelInnerEnergy {
   }
 
 }
-@flipTime: 0.25s;
+
 .colorbar {
-  transition: all linear @flipTime;
-  //transition: opacity linear 1s;
-  transform: rotateX(0deg);
-  &.ng-hide{
-    transform: rotateX(90deg);
-    display: block!important;
-    opacity: 0;
-  }
+  //transit ion: opacity linear 1s;
+ // transform: rotateX(0deg);
+  .flipShow(0.25s);
+  //&.ng-hide{
+  //  transform: rotateX(90deg);
+  //  display: block!important;
+  //  opacity: 0;
+  //}
   position: absolute;
+  top:0;
   width: 300px;
   height: 12px;
   border-radius: 6px;
@@ -443,12 +444,11 @@ div.hint-wrap{
 }
 
 h3.hint{
-  .ng-hide{
-    & h3.hint{
-      -webkit-animation: none;
-    }
-  }
-  opacity: inherit;
+  //.ng-hide{
+  //  & h3.hint{
+  //    -webkit-animation: none;
+  //  }
+  //}
   padding: 5px 1em 5px 1em;
   width: auto;
   height: auto;
