cleaned up ggc-btn placement, added AI template

--- a/client/app/playerPanel/playerPanel.less
+++ b/client/app/playerPanel/playerPanel.less
@@ -54,24 +54,13 @@ p.tab-body {
   //transition: 0.25s linear all;
   position: relative;
   top: 80px;
-
-  &.attract {
-    top: -20px;
+  &.attract{
+    top:40px;
+    margin:0;
   }
 
-  &.environment {
-    top:90px;
-    &.attract {
-      top: -20px;
-    }
-  }
 
-  &.energy {
-    top:90px;
-    &.attract {
-      top: -20px;
-    }
-  }
+
 
 
   &.selected {
@@ -470,6 +459,10 @@ h3.hint{
   left: 0;
   top: 100px;
   padding: 5%;
+  &.closed{
+    top: 40px;
+  }
+
 }
 
 .ggc-btn{
