--- a/client/app/playerPanel/playerPanel.css
+++ b/client/app/playerPanel/playerPanel.css
@@ -357,6 +357,38 @@ div.panelInnerEnergy {
   transform: rotateX(-90deg);
   opacity: 0;
 }
+.colorbar.T1 {
+  top: 150px;
+  left: 200px;
+}
+.colorbar.T2 {
+  top: 375px;
+  left: 205px;
+}
+.colorbar.T3 {
+  top: 375px;
+  left: 273px;
+}
+.colorbar.T4 {
+  top: 375px;
+  left: 175px;
+}
+.colorbar.T5 {
+  top: 375px;
+  left: 288px;
+}
+.colorbar h1 {
+  border-radius: 18px;
+  margin: -4px auto;
+  top: -4px;
+  background: #233;
+  text-align: center;
+  padding: 10px 13px 10px 13px;
+  border: 3px solid white;
+  font-family: "232MKSD", Helvetica, Arial, sans-serif;
+  position: absolute;
+  -webkit-animation: energy-glow-white 1s infinite;
+}
 .colorbar h3 {
   width: 150px;
   height: 20px;
@@ -370,6 +402,13 @@ div.panelInnerEnergy {
   font-stretch: expanded;
   padding: 0 3px 0 3px;
   font-family: "232MKSD", Helvetica, Arial, sans-serif;
+}
+.container .row {
+  position: relative;
+}
+.container .row h1 {
+  position: absolute;
+  text-align: center;
 }
 div.hint-wrap {
   margin-top: 18px;
@@ -403,6 +442,17 @@ h3.hint {
   height: 0;
   padding-bottom: 100%;
   width: 100%;
+}
+@-webkit-keyframes energy-glow-white {
+  0% {
+    box-shadow: 0 0 0 0 #ffffff;
+  }
+  50% {
+    box-shadow: 0 0 10px 4px #ffffff;
+  }
+  100% {
+    box-shadow: 0 0 0 0 #ffffff;
+  }
 }
 @-webkit-keyframes energy-glow {
   0% {
