--- a/client/app/game/game.css
+++ b/client/app/game/game.css
@@ -68,6 +68,8 @@
   padding: .4em .4em;
   letter-spacing: 1px;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.84);
+  margin-left:-10px;
+  margin-top:-12px;
 }
 .city:before {
   font-family: Lucida Sans Unicode, sans-serif;
@@ -220,6 +222,11 @@ div#perspective_plane {
   height: 65%;
   display: flex;
   align-items: center;
+}
+#currentMap,
+#middleMap,
+#futureMap{
+  background-position: -10px -12px !important;
 }
 #currentMap,
 #middleMap,
