--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -91,6 +91,8 @@
   padding: .4em .4em;
   letter-spacing: 1px;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.84);
+  margin-left:-10px;
+  margin-top:-12px;
   &:before{
     font-family: Lucida Sans Unicode, sans-serif;
     position: relative;
